--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -1,11 +1,50 @@
 @use "../abstracts/helper" as *;
 
 .location {
-  padding-top: 0;
+  padding: 0;
 }
 
 .contactInfo {
   .address-item {
     flex-basis: 30%;
+  }
+
+  .address-phone {
+    padding: 1.4rem 0;
+    font-size: 1.6rem;
+    color: $color-Dark-400;
+    transition: color 0.3s ease-in-out;
+
+    &:hover {
+      color: $color-primary;
+    }
+  }
+
+  span {
+    font-weight: 600;
+  }
+}
+
+.form {
+  .contact-form {
+    width: 80%;
+    margin-inline: auto;
+
+    label {
+      display: none;
+    }
+
+    input[type="text"],
+    input[type="email"] {
+      width: 50%;
+      border-radius: 0.8rem;
+    }
+
+    textarea {
+      padding: 2rem;
+      border-radius: 0.8rem;
+      margin-bottom: 4rem;
+      border: 0.1rem solid $color-light-400;
+    }
   }
 }
