Added the postcss plugin

--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -1,39 +1,49 @@
-@use "../abstracts/helper" as *;
+@import "../abstracts/variables.css";
 
 .btn {
-  font-size: $fs-btn;
+  font-size: var(--fs-btn);
   border-radius: 8rem;
   padding: 1.6rem 6rem;
   display: inline-block;
+}
+
+.btn-text {
+  font-style: italic;
+  color: var(--color-Dark-800);
+  transition: color 0.3s ease-in-out;
+
+  &:hover {
+    color: var(--color-primary);
+  }
 }
 
 .btn-dark {
   border: none;
   cursor: pointer;
   color: white;
-  background-color: $color-Dark-800;
+  background-color: var(--color-Dark-800);
   transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out,
     box-shadow 0.3s ease-in-out;
 
   &:hover {
-    color: $color-Dark-800;
+    color: var(--color-Dark-800);
     background-color: white;
-    box-shadow: $box-shadow-md;
+    box-shadow: var(--box-shadow-md);
   }
 }
 
 .btn-light {
   cursor: pointer;
-  color: $color-Dark-800;
+  color: var(--color-Dark-800);
   background-color: white;
-  border: 0.1rem solid $color-light-400;
+  border: 0.1rem solid var(--color-light-400);
   transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out,
     box-shadow 0.3s ease-in-out;
 
   &:hover {
     color: white;
-    box-shadow: $box-shadow-md;
+    box-shadow: var(--box-shadow-md);
     border: 0.1rem solid transparent;
-    background-color: $color-Dark-800;
+    background-color: var(--color-Dark-800);
   }
 }
