--- a/src/styles/layout/shipping.css
+++ b/src/styles/layout/shipping.css
@@ -1,4 +1,4 @@
-@use "../abstracts/helper" as *;
+@import "../abstracts/variables.css";
 
 .shipping {
   padding: 5rem 0 8rem;
@@ -22,7 +22,7 @@
 
     h2 {
       font-weight: 600;
-      font-size: $fs-h4;
+      font-size: var(--fs-h4);
       padding: 1.6rem 0;
     }
   }
