--- a/src/styles/abstracts/variables.css
+++ b/src/styles/abstracts/variables.css
@@ -56,5 +56,7 @@
   --box-shadow-md: 0 0.5rem 1rem hsla(0, 0%, 0%, 0.14);
   --box-shadow-sm: 0 0.125rem 0.25rem hsla(0, 0%, 0%, 0.07);
 
+  --box-shadowUp-sm: 0px -0.125rem 0.5rem -0.1rem hsla(0, 0%, 0%, 0.5);
+
   /* // --------------------------------------------------------------------------------------- */
 }
