--- a/src/styles/layout/header.css
+++ b/src/styles/layout/header.css
@@ -45,6 +45,12 @@ header {
     justify-content: space-between;
     align-items: center;
 
+    button {
+      border: none;
+      cursor: pointer;
+      background-color: transparent;
+    }
+
     svg {
       fill: var(--color-Dark-800);
 
@@ -70,6 +76,219 @@ header {
         align-items: center;
         background-color: var(--color-primary);
       }
+    }
+  }
+}
+
+.overlay {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  z-index: 9;
+  right: -100%;
+  transition: right 0.3s ease-in-out;
+  background-color: hsla(0, 0%, 0%, 0.685);
+
+  &.open {
+    right: 0;
+  }
+}
+
+.cart-sidebar {
+  position: fixed;
+  right: -45rem;
+  top: 0rem;
+  width: 45rem;
+  height: 100vh;
+  z-index: 99;
+  background-color: white;
+  box-shadow: var(--box-shadow-md);
+  transition: right 0.3s ease-in-out 0.1s;
+
+  &.open {
+    right: 0;
+  }
+
+  .cart-product-list {
+    height: 62vh;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      width: 0.4rem;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: var(--color-scrollbar);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: var(--color-light-800);
+    }
+  }
+
+  .cart-sidebar-content {
+    width: 100%;
+  }
+
+  .sidebar-body {
+    .cart-info {
+      padding: 5rem 2.5rem 4rem;
+      position: relative;
+      background-color: var(--color-light-400);
+
+      p {
+        padding: 2rem 0 0;
+        font-size: var(--fs-h5);
+      }
+
+      svg {
+        fill: var(--color-primary);
+      }
+
+      .bar {
+        width: 100%;
+        height: 0.6rem;
+        display: flex;
+        background-color: var(--color-primary);
+        background-image: linear-gradient(
+          135deg,
+          rgba(255, 255, 255, 0.15) 0,
+          rgba(255, 255, 255, 0.15) 25%,
+          rgba(255, 255, 255, 0) 25%,
+          rgba(255, 255, 255, 0) 50%,
+          rgba(255, 255, 255, 0.15) 50%,
+          rgba(255, 255, 255, 0.15) 75%,
+          rgba(255, 255, 255, 0) 75%,
+          rgba(255, 255, 255, 0) 100%
+        );
+        background-size: 40px 40px;
+        animation: 5s linear infinite progress;
+      }
+
+      .truck {
+        position: absolute;
+        top: 26%;
+        right: 4%;
+        border-radius: 50%;
+        width: 3rem;
+        height: 3rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+      }
+    }
+  }
+
+  .cart-hr {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 0.05rem solid hsla(0, 0%, 0%, 0.071);
+  }
+}
+
+.cart-products {
+  padding: 3rem 2rem;
+
+  img {
+    width: 10rem;
+    margin-right: 2rem;
+  }
+
+  img,
+  figure {
+    border-radius: 0.4rem;
+  }
+
+  .quantity-label,
+  .price {
+    font-size: 1.5rem;
+    padding: 1rem 0 2rem;
+
+    span {
+      font-weight: 600;
+    }
+  }
+
+  .quantity {
+    label {
+      display: none;
+    }
+
+    input {
+      width: 4rem;
+      height: 2rem;
+      border: none;
+      text-align: center;
+
+      &:focus-within {
+        outline: none;
+        /* border: none; */
+      }
+    }
+
+    .quantity-item {
+      border-radius: 0.4rem;
+      border: 0.1rem solid black;
+    }
+
+    .add-quantity,
+    .subtract-quantity {
+      line-height: 0;
+      padding: 0.6rem 1rem;
+      cursor: pointer;
+    }
+  }
+
+  .btn-delete {
+    margin-top: 0.2rem;
+    cursor: pointer;
+
+    svg {
+      fill: var(--color-light-800);
+      transition: fill 0.3s ease-in-out;
+    }
+
+    &:hover svg {
+      fill: var(--color-Dark-100);
+    }
+  }
+}
+
+.sidebar-footer {
+  width: 100%;
+  padding: 2rem;
+  height: calc(100vh - 70rem);
+  box-shadow: var(--box-shadowUp-sm);
+  background-color: var(--color-light-400);
+
+  .terms {
+    font-weight: 600;
+    color: var(--color-Dark-800);
+    transition: color 0.3s ease-in-out;
+
+    &:hover {
+      color: var(--color-primary);
+    }
+  }
+
+  input[type="checkbox"] {
+    padding: 1rem;
+    width: 1.6rem;
+    height: 1.6rem;
+    border-radius: 0.3rem;
+    accent-color: black;
+  }
+
+  .btn-dark {
+    width: 100%;
+    text-align: center;
+    margin-top: 2rem;
+
+    &:hover {
+      box-shadow: none;
     }
   }
 }
