--- a/src/styles/layout/header.css
+++ b/src/styles/layout/header.css
@@ -191,7 +191,7 @@ header {
   padding: 3rem 2rem;
 
   img {
-    width: 10rem;
+    width: 11rem;
     margin-right: 2rem;
   }
 
@@ -203,7 +203,7 @@ header {
   .quantity-label,
   .price {
     font-size: 1.5rem;
-    padding: 1rem 0 2rem;
+    padding: 0.6rem 0;
 
     span {
       font-weight: 600;
