--- a/src/styles/layout/newArrivals.css
+++ b/src/styles/layout/newArrivals.css
@@ -30,6 +30,15 @@
     position: relative;
     overflow: hidden;
 
+    .img-container {
+      height: 100%;
+      display: block;
+      line-height: 0;
+      overflow: hidden;
+      position: relative;
+      border-radius: 1.2rem;
+    }
+
     &:hover {
       .img-Bottom {
         transform: scale(1.1);
@@ -65,12 +74,6 @@
     transition: transform 0.3s ease-in-out;
   }
 
-  figure {
-    overflow: hidden;
-    position: relative;
-    border-radius: 1.2rem;
-  }
-
   .btn {
     position: absolute;
     bottom: -20%;
@@ -92,20 +95,28 @@
     right: -20%;
     transition: right 0.6s ease-in-out;
 
+    .close {
+      background-color: black;
+
+      svg {
+        fill: white;
+      }
+
+      &:hover {
+        background-color: white;
+        color: var(--color-Dark-800);
+
+        svg {
+          fill: var(--color-Dark-800);
+        }
+      }
+    }
+
     .wishlist,
     .compare,
     .viewed {
-      width: 4rem;
-      height: 4rem;
-      border: none;
-      cursor: pointer;
-      border-radius: 50%;
-      color: var(--color-Dark-800);
-      display: flex;
-      justify-content: center;
-      align-items: center;
       background-color: white;
-      transition: background-color 0.3s ease-in-out;
+      color: var(--color-Dark-800);
 
       svg {
         fill: black;
@@ -118,6 +129,21 @@
           fill: white;
         }
       }
+    }
+
+    .close,
+    .wishlist,
+    .compare,
+    .viewed {
+      width: 4rem;
+      height: 4rem;
+      border: none;
+      cursor: pointer;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
     }
   }
 
