Added NavLink in Header and Blog & Shop pages

--- a/src/styles/layout/header.css
+++ b/src/styles/layout/header.css
@@ -36,6 +36,10 @@ header {
       &:hover {
         color: var(--color-primary);
       }
+
+      &.active {
+        color: var(--color-primary);
+      }
     }
   }
 
